examples/test/testpolicy7136.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7136
  namespace: namespace280
spec:
  podSelector:
    matchLabels:
      key20: value37
      key42: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value10
          key6: value11
      podSelector:
        matchLabels:
          key38: value47
